Bugfix: fix spacing issues with home page links
The padding was acting weird and not working properly when there was more than one line of text.
This also fixes a problem created by c195a11beadf26f25480f2a6f8a0a258cb89e625 where the css was not being used in a unique enough way.

--- a/sites/all/themes/genesis/genesis_mcneese/css/layout.css
+++ b/sites/all/themes/genesis/genesis_mcneese/css/layout.css
@@ -537,22 +537,26 @@ div#home_page_columns div#home_page_columns-spotlight-more_link {
   overflow: hidden;
 }
 
-div#home_page_columns div#home_page_columns-news a,
-div#home_page_columns div#home_page_columns-events a,
-div#home_page_columns div#home_page_columns-spotlight a,
-div#home_page_columns div#home_page_columns-news a:visited,
-div#home_page_columns div#home_page_columns-events a:visited,
-div#home_page_columns div#home_page_columns-spotlight a:visited {
+div#home_page_columns div#home_page_columns-news div.views-field-title span.field-content a,
+div#home_page_columns div#home_page_columns-events div.views-field-title span.field-content a,
+div#home_page_columns div#home_page_columns-spotlight div.views-field-title span.field-content a,
+div#home_page_columns div#home_page_columns-news div.views-field-title span.field-content a:visited,
+div#home_page_columns div#home_page_columns-events div.views-field-title span.field-content a:visited,
+div#home_page_columns div#home_page_columns-spotlight div.views-field-title span.field-content a:visited {
+  display: block;
   color: #00477f;
   text-decoration: none;
   font-family: Georgia,Times New Roman,Times,Serif;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 17px;
+  min-height: 17px;
+  max-height: 34px;
+  overflow: hidden;
 }
 
-div#home_page_columns div#home_page_columns-news a:hover,
-div#home_page_columns div#home_page_columns-events a:hover,
-div#home_page_columns div#home_page_columns-spotlight a:hover {
+div#home_page_columns div#home_page_columns-news div.views-field-title span.field-content a:hover,
+div#home_page_columns div#home_page_columns-events div.views-field-title span.field-content a:hover,
+div#home_page_columns div#home_page_columns-spotlight div.views-field-title span.field-content a:hover {
   text-decoration: underline;
 }
 
@@ -584,9 +588,9 @@ div#home_page_columns h3.home_page_columns-column_title {
 }
 
 div#home_page_columns div.views-field-title {
-  min-height: 16px;
-  max-height: 32px;
-  line-height: 16px;
+  min-height: 17px;
+  max-height: 34px;
+  line-height: 17px;
 
   padding: 10px 12px;
 
